--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <title>Dandara </title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <nav>
 <ul>
   <li>
-  <body>sobre mim
-  </body>
+  <a>sobre mim</a>
   </li>
    <li>
   <a>projetos </a>
+   </li>
   <li>
-  </li>
-   <a>contato</a>
+  <a>contato </a>
   </li>
 </ul>
 </nav>
