--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <nav>
 <ul>
   <li>
-   <a href="index.html">sobre mim </a>
+   <a >sobre mim </a>
   </li>
    <li>
-   <a href="project.html">projetos </a>
+   <a >projetos </a>
    </li>
   <li>
- <a href="contact.html"> contato</a>
+ <a > contato</a>
   </li>
 </ul>
 </nav>
